deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-digitalmarketing
  labels:
    app: app-dm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-dm
  template:
    metadata:
      labels:
        app: app-dm
    spec:
      containers:
      - name: c-dm
        image: raemondarellano/digital-marketing:1.0.0-4
        ports:
        - containerPort: 80
