service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-digitalmarketing
spec:
  selector:
    app: app-dm
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
#      nodePort: 30012
