ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-digitalmarketing

spec:
  rules:
  - host: "my.dm"         # domain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-digitalmarketing
            port:
              number: 80
